# modorganizer-diagnose_basic

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt  diagnose_basic_en.ts  diagnosebasic.cpp
src/linux/: diagnosebasic_linux.cpp
src/win32/: diagnosebasic_win32.cpp
